# micropitcher

./: .gitignore  CMakeLists.txt  Micropitcher.jucer  README.md  build.sh
Plugins/MeeQ/: CMakeLists.txt
Plugins/MeeQ/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/: MidiProcessor.h  PathHelper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TreeValues.h
Source/Components/: DetailsComponent.cpp  DetailsComponent.h  GraphComponent.cpp  GraphComponent.h  GraphContainerComponent.cpp  GraphContainerComponent.h  GraphHelper.h  MainComponent.cpp  MainComponent.h  ToolbarComponent.cpp  ToolbarComponent.h  interactionStates.h
src/: CMakeLists.txt  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/MeeQ/Source/: PluginProcessor.cpp  PluginProcessor.h
src/NewPluginTemplate/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h
src/components/: CentreComponent.h  DetailsComponent.h  GraphComponent.h  MainComponent.h  ToolbarComponent.h
